RESOLVED FIXED287522
Setting __XPC_JSC_forceRAMSize silently fails due to bad cast
https://bugs.webkit.org/show_bug.cgi?id=287522
Summary Setting __XPC_JSC_forceRAMSize silently fails due to bad cast
Andrew Fryer
Reported 2025-02-11 16:01:23 PST
Setting `export __XPC_JSC_forceRAMSize=17179869184; # 16 GB` silently fails due to a bad cast (didn't affect `m_ramSize` in `Source/JavaScriptCore/heap/Heap.cpp`). The fix is to change the type of `forceRAMSize` to `Size` (rather than `Unsized`).
Attachments
Andrew Fryer
Comment 1 2025-02-11 16:06:25 PST
Andrew Fryer
Comment 2 2025-02-11 16:06:41 PST
EWS
Comment 3 2025-02-12 13:01:53 PST
Committed 290297@main (d97ba4719dc6): <https://commits.webkit.org/290297@main> Reviewed commits have been landed. Closing PR #40443 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.