Setting __XPC_JSC_forceRAMSize silently fails due to bad cast https://bugs.webkit.org/show_bug.cgi?id=287522 rdar://144649062

Reviewed by Keith Miller.

Changing the type of forceRAMSize from `Unsized` to `Size` gives enough bits
to have a valid cast (given a reasonable number of bytes for RAM size, such as
17179869184, which is 16 GB).

* Source/JavaScriptCore/runtime/OptionsList.h:

Canonical link: https://commits.webkit.org/290297@main